--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 # JWT_SECRET=tasksapi
 # MONGO_URL='mongodb+srv://bots8x:bot123@cluster0.ix4sp5j.mongodb.net/?retryWrites=true&w=majority'
 # MONGODB_URI="mongodb+srv://bots8x:bot123@cluster0.ix4sp5j.mongodb.net/UserDB?retryWrites=true&w=majority"
-MONGODB_URI=mongodb+srv://bots8x:bot123@cluster0.ix4sp5j.mongodb.net/UserDB?retryWrites=true&w=majority
+MONGODB_URI="mongodb+srv://bots8x:bot123@cluster0.ix4sp5j.mongodb.net/UserDB?retryWrites=true&w=majority"
