--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@
 # MONGO_URL='mongodb+srv://bots8x:bot123@cluster0.ix4sp5j.mongodb.net/?retryWrites=true&w=majority'
 # MONGODB_URI="mongodb+srv://bots8x:bot123@cluster0.ix4sp5j.mongodb.net/UserDB?retryWrites=true&w=majority"
 MONGODB_URI="mongodb+srv://bots8x:bot123@cluster0.ix4sp5j.mongodb.net/UserDB?retryWrites=true&w=majority"
+
+AUTH_EMAIL=bot.s8x@gmail.com
+AUTH_PASS="mdfu ivsg caxf jmyg"
